--- a/Code/index.html
+++ b/Code/index.html
@@ -138,11 +138,21 @@ saver.SaveCodeToFile(@class, @&quot;/path/HelloWorld.cs&quot;);
 </code></pre><h4 id="compile">Compile</h4>
 <pre><code class="lang-c#">var compiler = new Compiler();
 
+//To a dll
+
 // From string
 var result = await compiler.CompileSourceAsync(@&quot;/path/HelloWorld.dll&quot;, generatedCode);
 
 // From file
 var result = await compiler.CompileFilesAsync(@&quot;/path/HelloWorld.dll&quot;,  @&quot;/path/HelloWorld.cs&quot;);
+
+//In memory (without creating a dll)
+
+// From string
+var result = await compiler.CompileSourceInMemoryAsync(generatedCode);
+
+// From file
+var result = await compiler.CompileFilesInMemoryAsync(@&quot;/path/HelloWorld.cs&quot;);
 </code></pre><h2 id="missing-anything">Missing anything?</h2>
 <p>If we miss a feature, syntax or statements - just create an issue or contact us and I&#39;m sure we can add it.</p>
 <p>It is also possible for you to contribute with your own feature. Simply add a pull request and we will look at it. </p>
